--- a/cardgame-server/Cargo.toml
+++ b/cardgame-server/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
-name = "cardgame-server"
-version = "0.1.0"
 authors = ["Lasm Gratel <lasm_gratel@hotmail.com>"]
 edition = "2018"
+name = "cardgame-server"
+version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cardgame = { path = "../cardgame" }
+bimap = "0.6.1"
 bincode = "1.3.3"
+cardgame = {path = "../cardgame"}
 message-io = "0.13"
 uuid = {version = "0.8", features = ["serde", "v4"]}
