--- a/cardgame-client/Cargo.toml
+++ b/cardgame-client/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 cardgame = { path = "../cardgame" }
+serde = {version = "1.0", features = ["derive"]}
 bincode = "1.3.3"
 message-io = "0.13"
 uuid = {version = "0.8", features = ["serde", "v4"]}
