--- a/cardgame/Cargo.toml
+++ b/cardgame/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0"
 log = "0.4"
 rand = "*"
 regex = "1"
