--- a/cardgame-client/Cargo.toml
+++ b/cardgame-client/Cargo.toml
@@ -12,3 +12,4 @@ serde = {version = "1.0", features = ["derive"]}
 bincode = "1.3.3"
 message-io = "0.13"
 uuid = {version = "0.8", features = ["serde", "v4"]}
+async-std = "1.9.0"
