--- a/cardgame-client/Cargo.toml
+++ b/cardgame-client/Cargo.toml
@@ -13,3 +13,5 @@ bincode = "1.3.3"
 message-io = "0.13"
 uuid = {version = "0.8", features = ["serde", "v4"]}
 async-std = "1.9.0"
+humantime = "2.1.0"
+timeago = "0.3.0"
