--- a/cardgame-server/Cargo.toml
+++ b/cardgame-server/Cargo.toml
@@ -12,3 +12,5 @@ bincode = "1.3.3"
 cardgame = {path = "../cardgame"}
 message-io = "0.13"
 uuid = {version = "0.8", features = ["serde", "v4"]}
+humantime = "2.1.0"
+timeago = "0.3.0"
