--- a/cardgame/Cargo.toml
+++ b/cardgame/Cargo.toml
@@ -8,6 +8,7 @@ license = "GPL-3.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 log = "0.4"
