--- a/cardgame-server/Cargo.toml
+++ b/cardgame-server/Cargo.toml
@@ -14,3 +14,5 @@ message-io = "0.13"
 uuid = {version = "0.8", features = ["serde", "v4"]}
 humantime = "2.1.0"
 timeago = "0.3.0"
+anyhow = "1.0"
+async-std = "1.10"
