--- a/cardgame-bevy-server/Cargo.toml
+++ b/cardgame-bevy-server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bimap = "0.6.1"
 cardgame = {path = "../cardgame"}
 cardgame-common = {path = "../cardgame-common"}
 bevy = { version = "0.5", features = [], default-features = false }
