--- a/cardgame/Cargo.toml
+++ b/cardgame/Cargo.toml
@@ -9,6 +9,7 @@ license = "GPL-3.0"
 
 [dependencies]
 anyhow = "1.0"
+thiserror = "1.0"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 log = "0.4"
